syntax = "proto3";

package order;

option go_package = "./pkg/order/pb";

service OrderService {
    rpc createOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}

// 주문 생성
message CreateOrderRequest {
    int64 productInfoId = 1;
    int64 quantity = 2;
    int64 userInfoId = 3;
}

message CreateOrderResponse {
    int64 status = 1;
    string error = 2;
    int64 orderInfoId = 3;
}