syntax = "proto3";

option go_package = "github.com/skrevolve/proto/user";

service User {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string device_token = 3;
}

message LoginResponse {
  string access_token = 1;
}